# janus

./: .gitignore  3dprint.stl  LICENSE  README.md  donation.html  get_embedding_function.py  local_voice_chat.py  populate_database.py  pyproject.toml  requirements.txt  sora.html
fastrtc/: package-lock.json  pyproject.toml
fastrtc/backend/fastrtc/: stream.py  webrtc.py  webrtc.pyi  webrtc_connection_mixin.py
fastrtc/backend/fastrtc/templates/component/: _basePickBy-CQQ3Xoz5.js  _baseUniq-BR61E8JP.js  arc-DNwqsp59.js  architectureDiagram-IEHRJDOE-__i8kDIP.js  blockDiagram-JOT3LUYC-Ch6VFqZo.js  c4Diagram-VJAJSXHY-ClNax5Uj.js  channel-DTB-_BmS.js  chunk-4BMEZGHF-bE1m3Gyy.js  chunk-A2AXSNBT-JIPHao1j.js  chunk-AEK57VVT-BAjGiIEi.js  chunk-D6G4REZN-3XI0cEbm.js  chunk-RZ5BOZE2-BZnCb_nJ.js  chunk-XZIHB7SX-BXufe0eY.js  classDiagram-GIVACNV2-DkR1Crs4.js  clone-BxXDrfHa.js  dagre-OKDRZEBW-D-O3nmn1.js  diagram-SSKATNLV-CXktlCgo.js  diagram-VNBRO52H-C8Wc16Yr.js  erDiagram-Q7BY3M3F-CplAVbFF.js  flowDiagram-4HSFHLVR-DVdvV7l2.js  ganttDiagram-APWFNJXF-DNSeJIr2.js  gitGraphDiagram-7IBYFJ6S-D15OGE3H.js  graph-DhAaJubU.js  index-Bte5FCpu.js  index.js  infoDiagram-PH2N3AL5-D90YqzDf.js  journeyDiagram-U35MCT3I-CwZkWD-K.js  kanban-definition-NDS4AKOZ-CkNSifuY.js  layout-DkhOgH6n.js  linear-DZdLV53s.js  mermaid.core-DBM7LDcW.js  mindmap-definition-ALO5MXBD-DpUm2REQ.js  pieDiagram-IB7DONF6-D7-hl5XT.js  (+9 more)
fastrtc/backend/fastrtc/text_to_speech/: tts.py
fastrtc/demo/talk_to_sambanova/: index.html
fastrtc/demo/whisper_realtime/: README.md
fastrtc/frontend/: Index.svelte  package-lock.json
